<resources>
    <string name="app_name">छत्तीसगढ़ मदद</string>
    <string name="header">कोरोना वायरस से संक्रमित होने वाले लोगों
की संख्या 24 लाख से ज्यादा हो गई है.
अमेरिका में इससे 40 हजार लोगों की मौत हो गई है.
वहां 7 लाख से ज्यादा लोग संक्रमित हैं.
भारत में भी संक्रमित लोगों की संख्या 16000 के पार चली गई है.
इसकी दवा अब तक उपलब्ध नहीं है.
इसलिए इससे बचाव ही एकमात्र रास्ता है.

कोरोना वायरस के संक्रमण को फैलने से रोकने के लिए
इसके लक्षणों को पहचानना बेहद जरूरी है.
लक्षणों को पहचानकर ही कोरोना वायरस को काबू में किया जा सकता है.
</string>
    <string name="heading1">कोरोना संबंधित जानकारी</string>
    <string name="heading2">कोरोना वायरस के लक्षण और बचाव के तरीके</string>
    <string name="heading3">कोरोना वायरस का मुख्य लक्षण तेज बुखार है. बच्चों और वयस्कों में अगर 37.7 डिग्री सेल्सियस या इससे ऊपर पहुंचता है तभी यह चिंता का विषय है.</string>
    <string name="heading4">विश्व स्वास्थ्य संगठन के मुताबिक कोरोना वायरस से संक्रमित होने पर 88 फीसदी को बुखार, 68 फीसदी को खांसी और कफ, 38 फीसदी को थकान, 18 फीसदी को सांस लेने में तकलीफ, 14 फीसदी को शरीर और सिर में दर्द, 11 फीसदी को ठंड लगना और 4 फीसदी में डायरिया के लक्षण दिखते हैं. रनिंग नोज यानी नाक बहना कोरोना वायरस का लक्षण नहीं माना जा रहा है. </string>
    <string name="heading5">आइए जानते हैं कि इस वायरस के लक्षण और बचाव के तरीके क्या हैं. क्या है कोरोना वायरस? कोरोना वायरस का संबंध वायरस के ऐसे परिवार से है, जिसके संक्रमण से जुकाम से लेकर सांस लेने में तकलीफ जैसी समस्या हो सकती है. इस वायरस को पहले कभी नहीं देखा गया है. इस वायरस का संक्रमण दिसंबर में चीन के वुहान में शुरू हुआ था. डब्लूएचओ के मुताबिक, बुखार, खांसी, सांस लेने में तकलीफ इसके लक्षण हैं. अब तक इस वायरस को फैलने से रोकने वाला कोई टीका नहीं बना है. क्या हैं इस बीमारी के लक्षण? इसके लक्षण फ्लू से मिलते-जुलते हैं. संक्रमण के फलस्वरूप बुखार, जुकाम, सांस लेने में तकलीफ, नाक बहना और गले में खराश जैसी समस्या उत्पन्न होती हैं. यह वायरस एक व्यक्ति से दूसरे व्यक्ति में फैलता है. इसलिए इसे लेकर बहुत सावधानी बरती जा रही है. कुछ मामलों में कोरोना वायरस घातक भी हो सकता है. खास तौर पर अधिक उम्र के लोग और जिन्हें पहले से अस्थमा, डायबिटीज़ और हार्ट की बीमारी है.</string>
    <string name="heading6">क्या हैं इससे बचाव के उपाय?</string>
    <string name="heading7">स्‍वास्‍थ्‍य मंत्रालय ने कोरोना वायरस से बचने के लिए दिशानिर्देश जारी किए हैं. इनके मुताबिक, हाथों को साबुन से धोना चाहिए. अल्‍कोहल आधारित हैंड रब का इस्‍तेमाल भी किया जा सकता है. खांसते और छीकते समय नाक और मुंह रूमाल या टिश्‍यू पेपर से ढककर रखें. जिन व्‍यक्तियों में कोल्‍ड और फ्लू के लक्षण हों उनसे दूरी बनाकर रखें. अंडे और मांस के सेवन से बचें. जंगली जानवरों के संपर्क में आने से बचें. </string>
    <string name="heading8">कोरोना की पहचान के लिए इन लक्षणों पर गौर करें </string>
    <string name="heading9">तेज बुखार आनाः</string>
    <string name="heading10">अगर किसी व्यक्ति को सुखी खांसी के साथ तेज बुखार है तो उसे एक बार जरूर जांच करानी चाहिए. यदि आपका तापमान 99.0 और 99.5 डिग्री फारेनहाइट है तो उसे बुखार नहीं मानेंगे. अगर तापमान 100 डिग्री फ़ारेनहाइट (37.7 डिग्री सेल्सियस) या इससे ऊपर पहुंचता है तभी यह चिंता का विषय है. </string>
    <string name="heading11">कफ और सूखी खांसीः</string>
    <string name="heading12">पाया गया है कि कोरोना वायरस कफ होता है मगर संक्रमित व्यक्ति को सुखी खांसी आती है.</string>
    <string name="heading13">सांस लेने में समस्याः</string>
    <string name="heading14">कोरोना वायरस से संक्रमित होने के 5 दिनों के अंदर व्यक्ति को सांस लेने में समस्या हो सकती है. सांस लेने की समस्या दरअसल फेफड़ो में फैलते कफ के कारण होती है.</string>
    <string name="heading15">फ्लू-कोल़्ड जैसे लक्षणः</string>
    <string name="heading16">विश्व स्वास्थ्य संगठन (WHO) के अनुसार कोरोना वायरस से संक्रमित होने पर कभी-कभी बुखार, खांसी, सांस में दिक्कत के अलावा फ्लू और कोल्ड जैसे लक्षण भी हो सकते हैं. </string>
    <string name="heading17">फडायरिया और उल्टीः</string>
    <string name="heading18">कोरोना से संक्रमित लोगों में डायरिया और उल्टी के भी लक्षण देखे गए है. करीब 30 प्रतिशत लोगों में इस तरह के लक्षण पाये गए हैं. </string>
    <string name="heading19">सूंघने और स्वाद की क्षमता में कमीः</string>
    <string name="heading20">बहुत से मामलों में पाया गया है कि कोरोना से संक्रमित लोगों को सूंघने और स्वाद की क्षमता में कमी आती है. </string>
    <string name="heading21">खाद्य मंत्रालय के एक वरिष्ठ अधिकारी ने गुरुवार को कहा कि सरकार अगले तीन महीनों में पीडीएस के तहत 2 किलो अतिरिक्त खाद्यान्न की आपूर्ति करेगी, जो कुल मासिक कोटा 7 किलोग्राम है। बुधवार को, प्रधान मंत्री नरेंद्र मोदी की अध्यक्षता में आर्थिक मामलों की मंत्रिमंडलीय समिति (सीसीईए) ने सार्वजनिक वितरण प्रणाली (पीडीएस) के तहत पंजीकृत देश के 80 करोड़ से अधिक लोगों को अतिरिक्त दो किलो सब्सिडी वाले खाद्यान्नों की आपूर्ति के प्रस्ताव को मंजूरी दे दी थी।</string>

</resources>
