<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/heading1"
                android:id="@+id/update"
                android:gravity="center"
                android:textColor="#F70707"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:id="@+id/message"
                android:textColor="#0C0B0B"
                android:lineSpacingExtra="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header"/>

            <ImageView
                android:layout_margin="10dp"
                app:srcCompat="@drawable/corona1"
                android:layout_width="wrap_content"
                android:layout_height="250dp"/>
            <TextView
                android:lineSpacingExtra="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="30sp"
                android:fontFamily="sans-serif"
                android:text="@string/heading2"
                android:textStyle="bold"
                android:textColor="#F70707"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading3"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading4"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading5"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/corona2"
                android:layout_width="wrap_content"
                android:layout_height="250dp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading6"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading7"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading8"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:textColor="#F70707"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:textSize="25sp"
                        android:lineSpacingExtra="20dp"
                        android:layout_column="1"
                        android:text="• "/>
                    <TextView
                        android:textColor="#F70707"
                        android:textSize="30sp"
                        android:lineSpacingExtra="20dp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:text="@string/heading9"
                        />
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:lineSpacingExtra="20dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:text="@string/heading10"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:textSize="25sp"
                        android:layout_column="1"
                        android:text="• "/>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:text="@string/heading11"
                        />
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading12"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:textSize="25sp"
                        android:layout_column="1"
                        android:text="• "/>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:text="@string/heading13"
                        />
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading14"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:textSize="25sp"
                        android:layout_column="1"
                        android:text="• "/>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:text="@string/heading15"
                        />
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading16"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:textSize="25sp"
                        android:layout_column="1"
                        android:text="• "/>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:text="@string/heading17"
                        />
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading18"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:textSize="25sp"
                        android:layout_column="1"
                        android:text="• "/>
                    <TextView
                        android:lineSpacingExtra="20dp"
                        android:textColor="#F70707"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_column="2"
                        android:layout_width="wrap_content"
                        android:text="@string/heading19"
                        />
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading20"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_margin="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/corona3"
                android:layout_width="wrap_content"
                android:layout_height="250dp"/>

            <ImageView
                android:layout_margin="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/corona4"
                android:layout_width="wrap_content"
                android:layout_height="250dp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="20dp"
                android:text="@string/heading21"
                android:textColor="#0C0B0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>